<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:padding="16dp">

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:minHeight="150dp"
        android:src="@drawable/product_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_stock_unit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image_view"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_stockname">

        <EditText
            android:id="@+id/stock_unit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_unit_name_label"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/subtract_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_stock_unit_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:text="@string/subtract_quantity_button"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_stock_unit_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_stock_unit_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/subtract_quantity_button">

        <EditText
            android:id="@+id/stock_unit_quantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/stock_quantity_label"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@string/default_zero"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_stock_unit_name"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/input_stock_unit_quantity"
        android:text="@string/add_quantity_button"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_stock_unit_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_quantity_button"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_price">

        <EditText
            android:id="@+id/stock_unit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/stock_price_label"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_stock_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_stock_unit_price"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_category">

        <EditText
            android:id="@+id/stock_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_stock_unit_price"
            android:layout_marginTop="8dp"
            android:hint="@string/Category"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_stock_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_stock_category"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="300"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_detail">

        <EditText
            android:id="@+id/stock_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/stock_detail_label"
            android:inputType="phone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_stock_detail"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Submit" />

</RelativeLayout>